# call-me-maybe

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json  function_calling_tests3.json  functions_definition.json
data/output/: function_calling_results.json
src/: __init__.py  __main__.py  models.py
src/generation/: __init__.py  constrained_decoding.py  decoder.py  decoding_steps.py  state_machine.py  trie.py
src/generation/json_types/: __init__.py  bool.py  integer.py  json_types.py  number.py  string.py  type_registry.py
src/parser/: __init__.py  parser_args.py  validate_json.py
